добавления автаров в методы
