# backend/docs/api/swagger.yaml
@@ -332,8 +332,14 @@ components:
         assignee_id:
           type: integer
           nullable: true
+        assignee_avatar_id:
+          type: integer
+          nullable: true
         author_id:
           type: integer
+        author_avatar_id:
+          type: integer
+          nullable: true
         created_at:
           type: string
           format: date-time
